[2017-09-09 17:37:29 +0200]  Fix typo in packages.xml                                                   karasu      {3d1baf63}
[2017-09-08 17:57:57 +0200]  Add reflector to all installations                                         karasu      {fe1b0892}
[2017-09-08 17:57:32 +0200]  Add reflector to all installations                                         karasu      {5feaeb3b}
[2017-09-08 17:53:37 +0200]  Changes in deepin package list                                             karasu      {04973aa7}
[2017-08-31 01:54:20 +0200]  Change mouse cursor when dragging a mirror                                 karasu      {7b2ced69}
[2017-08-30 16:57:37 +0200]  Add a source comment                                                       karasu      {d9dee641}
[2017-08-30 16:54:34 +0200]  Fix bug in forward button when changing options in mirrors screen          karasu      {e163e1a5}
[2017-08-30 16:51:11 +0200]  hide/show mirrors listboxes                                                karasu      {b8ae0f25}
[2017-08-30 15:48:44 +0200]  Better radiobuttons placement in mirrors screen                            karasu      {d87e2356}
[2017-08-30 12:37:43 +0200]  Fix location listbox labels size (was too small)                           karasu      {1298d5f2}
[2017-08-30 11:41:22 +0200]  Fix typo and add a debug warning                                           karasu      {1e4b10d9}
[2017-08-30 04:07:45 +0200]  Fixed two unused variables (antbs)                                         karasu      {d05a241d}
[2017-08-30 03:48:32 +0200]  Forgot to remove the option from the run script                            karasu      {9ccb1687}
[2017-08-30 03:43:56 +0200]  Disable rank mirrors option (now we have a full screen to do it)           karasu      {322e9bbc}
[2017-08-30 03:24:28 +0200]  Changes are saved.                                                         karasu      {9b1c6b65}