@@ -1,3 +1,4 @@
+[2017-09-09 17:37:56 +0200]  Fix typo in packages.xml                                                   karasu      {089a4e92}
 [2017-09-09 17:37:29 +0200]  Fix typo in packages.xml                                                   karasu      {3d1baf63}
 [2017-09-08 17:57:57 +0200]  Add reflector to all installations                                         karasu      {fe1b0892}
 [2017-09-08 17:57:32 +0200]  Add reflector to all installations                                         karasu      {5feaeb3b}
